Add .env, update example, and add vectorstore
Add a new .env file and update .env.example to enable OpenAI embeddings; note the .env contains an OpenAI API key (sensitive). Also add compiled Python bytecode under src/__pycache__ and a prebuilt vectorstore (binary blobs and chroma.sqlite3) for retrieval functionality. If this was unintentional, remove the committed secret, rotate the key, and consider ignoring .env, __pycache__, and large binary/vectorstore files in .gitignore.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Copy this file to .env and fill in your values
 
 # Required: OpenAI API Key for LLM
-OPENAI_API_KEY=sk-your-api-key-here
+OPENAI_API_KEY=<key here>
 
 # Optional: Set to 'true' to use OpenAI embeddings instead of local
-USE_OPENAI_EMBEDDINGS=false
+USE_OPENAI_EMBEDDINGS=true
 
 # Optional: Ollama configuration for local LLM
 # OLLAMA_BASE_URL=http://localhost:11434
