added open rauter support

--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
-# Copy this file to .env and fill in your values
+# OpenRouter (FREE - for testing)
+# Get your key at: https://openrouter.ai/keys
+USE_OPENROUTER=true
+OPENROUTER_API_KEY=key
 
-# Required: OpenAI API Key for LLM
-OPENAI_API_KEY=<key here>
+# OpenAI (comment out if using OpenRouter)
+# OPENAI_API_KEY=sk-your-key-here
 
-# Optional: Set to 'true' to use OpenAI embeddings instead of local
-USE_OPENAI_EMBEDDINGS=true
-
-# Optional: Ollama configuration for local LLM
-# OLLAMA_BASE_URL=http://localhost:11434
-# OLLAMA_MODEL=llama3.2
+# Embeddings (false = free local embeddings)
+USE_OPENAI_EMBEDDINGS=false
