--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,26 @@
 # Copy this file to .env and fill in your values
 
-# Required: OpenAI API Key for LLM
-OPENAI_API_KEY=<key here>
+# =============================================================================
+# Option 1: OpenRouter (FREE - Recommended for testing)
+# =============================================================================
+# Get your free API key at: https://openrouter.ai/keys
+USE_OPENROUTER=true
+OPENROUTER_API_KEY=key
 
-# Optional: Set to 'true' to use OpenAI embeddings instead of local
-USE_OPENAI_EMBEDDINGS=true
+# =============================================================================
+# Option 2: OpenAI (Paid)
+# =============================================================================
+# OPENAI_API_KEY=sk-your-openai-key-here
 
-# Optional: Ollama configuration for local LLM
+# =============================================================================
+# Embedding Settings
+# =============================================================================
+# Set to 'true' to use OpenAI embeddings (requires OPENAI_API_KEY)
+# Set to 'false' to use free local embeddings (sentence-transformers)
+USE_OPENAI_EMBEDDINGS=false
+
+# =============================================================================
+# Optional: Ollama for fully local LLM
+# =============================================================================
 # OLLAMA_BASE_URL=http://localhost:11434
 # OLLAMA_MODEL=llama3.2
