created mobile app and api

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ OPENROUTER_API_KEY=<API_KEY>
 
 # Embeddings (false = free local embeddings)
 USE_OPENAI_EMBEDDINGS=false
+
+# JWT Secret Key for API authentication
+JWT_SECRET_KEY=dummy-secret-key-for-development-only-change-in-production
