--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,15 @@ USE_OPENAI_EMBEDDINGS=false
 # =============================================================================
 # OLLAMA_BASE_URL=http://localhost:11434
 # OLLAMA_MODEL=llama3.2
+
+# =============================================================================
+# API Settings (for mobile app backend)
+# =============================================================================
+# REQUIRED: Secret key for JWT tokens (generate with: openssl rand -hex 32)
+JWT_SECRET_KEY=your-secret-key-here-generate-with-openssl
+
+# Optional: Database URL (defaults to SQLite)
+# DATABASE_URL=sqlite:///./api_users.db
+
+# Optional: For PostgreSQL in production
+# DATABASE_URL=postgresql://user:password@localhost:5432/drrag
