--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-community>=0.3.0
-langchain-openai>=0.2.0
+langchain-ollama>=0.1.0
 langchain-chroma>=0.1.0
 langchain-huggingface>=0.1.0
 
@@ -20,6 +20,3 @@ streamlit>=1.30.0
 
 # Environment management
 python-dotenv>=1.0.0
-
-# Optional: Ollama integration (uncomment to use)
-# langchain-ollama>=0.1.0
