--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # OpenRouter (FREE - for testing)
 # Get your key at: https://openrouter.ai/keys
 USE_OPENROUTER=true
-OPENROUTER_API_KEY=<API_KEY>
+OPENROUTER_API_KEY=key
 
 # OpenAI (comment out if using OpenRouter)
 # OPENAI_API_KEY=sk-your-key-here
