--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,10 @@
 # Copy this file to .env and fill in your values
 
 # =============================================================================
-# Option 1: OpenRouter (FREE - Recommended for testing)
+# Local LLM (Ollama)
 # =============================================================================
-# Get your free API key at: https://openrouter.ai/keys
-USE_OPENROUTER=true
-OPENROUTER_API_KEY=key
-
-# =============================================================================
-# Option 2: OpenAI (Paid)
-# =============================================================================
-# OPENAI_API_KEY=sk-your-openai-key-here
-
-# =============================================================================
-# Embedding Settings
-# =============================================================================
-# Set to 'true' to use OpenAI embeddings (requires OPENAI_API_KEY)
-# Set to 'false' to use free local embeddings (sentence-transformers)
-USE_OPENAI_EMBEDDINGS=false
-
-# =============================================================================
-# Optional: Ollama for fully local LLM
-# =============================================================================
-# OLLAMA_BASE_URL=http://localhost:11434
-# OLLAMA_MODEL=llama3.2
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2
 
 # =============================================================================
 # API Settings (for mobile app backend)
